# fid-burn

./: Cargo.toml
examples/: example.rs
src/: fd.rs  fid.rs  fid_forward.rs  lib.rs  sqrtm.rs
