[package]
name = "fid-burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn" }
inception-v3-burn = { path = "/home/r-user/projects/inception-v3-burn", features = ["pretrained"] }
ndarray = "^0.15.6"
ndarray-linalg = "^0.16.0"
thiserror = "1.0.62"

[dev-dependencies]
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"]}
